# pdf_split_and_count

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/pdf_split_and_count/: __init__.py  image_processing.py  main.py  pdf_handling.py  pdf_processor.py  reporting.py
tests/: test_pdf_processor.py
